--- a/app/src/main/res/layout/activity_splashactivity.xml
+++ b/app/src/main/res/layout/activity_splashactivity.xml
@@ -9,7 +9,7 @@
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="200sp"
         android:layout_marginTop="20sp"
         android:src="@drawable/noforeignland"
         app:srcCompat="@android:drawable/sym_def_app_icon" />
