--- a/app/src/main/res/layout/places_details_row.xml
+++ b/app/src/main/res/layout/places_details_row.xml
@@ -5,16 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <de.hdodenhof.circleimageview.CircleImageView
+    <ImageView
         android:id="@+id/imageView_place_banner"
-        android:layout_width="350dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
-        app:civ_border_color="@android:color/black"
-        app:civ_border_width="2dp"
-        app:layout_constraintDimensionRatio="16:9"
-        app:layout_constraintEnd_toStartOf="@+id/imageView_ic_google_marker"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:background="@drawable/rounded_image"
+        android:scaleType="centerInside"
+        app:layout_constraintEnd_toEndOf="@id/imageView_ic_google_marker"
+        app:layout_constraintHeight_max="400dp"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_placeDetailName"
         app:srcCompat="@android:drawable/sym_def_app_icon" />
@@ -39,13 +39,13 @@
         android:id="@+id/textView_latitude"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="24dp"
         android:background="@drawable/round_corners_placesdetails"
         android:fontFamily="@font/cinzel_bold"
         android:padding="10dp"
         android:text="Latitude"
         android:textColor="@android:color/black"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_places_comments" />
 
@@ -53,13 +53,13 @@
         android:id="@+id/textView_longitude"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/round_corners_placesdetails"
         android:fontFamily="@font/cinzel_bold"
         android:padding="10dp"
         android:text="Longitude + "
         android:textColor="@android:color/black"
+        android:background="@drawable/round_corners_placesdetails"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_latitude" />
 
@@ -68,12 +68,12 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:background="@drawable/round_corners_placesdetails"
         android:fontFamily="@font/cinzel_bold"
         android:padding="10dp"
         android:text="TextView"
         android:textColor="@android:color/black"
         android:textSize="16sp"
+        android:background="@drawable/round_corners_placesdetails"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
