Changes to the UI

--- a/app/src/main/res/layout/places_details_row.xml
+++ b/app/src/main/res/layout/places_details_row.xml
@@ -1,18 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/imageview_places_details"
     android:layout_width="match_parent"
+    android:clipToPadding="false"
     android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/imageView_place_banner"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="200dp"
         android:adjustViewBounds="true"
-        android:background="@drawable/rounded_image"
+        android:background="#fff"
+        android:elevation="8dp"
         android:scaleType="centerInside"
-        app:layout_constraintEnd_toEndOf="@id/imageView_ic_google_marker"
+        android:translationZ="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_max="400dp"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,7 +30,9 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:background="@drawable/round_corners_placesdetails"
+        android:elevation="8dp"
+        android:translationZ="8dp"
+        android:background="#fff"
         android:fontFamily="@font/cinzel_bold"
         android:padding="10dp"
         android:text="Comments"
@@ -40,10 +46,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:background="@drawable/round_corners_placesdetails"
+        android:background="#fff"
         android:fontFamily="@font/cinzel_bold"
         android:padding="10dp"
         android:text="Latitude"
+        android:elevation="8dp"
+        android:translationZ="8dp"
         android:textColor="@android:color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,41 +62,46 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="20dp"
+        android:background="#fff"
+        android:elevation="8dp"
         android:fontFamily="@font/cinzel_bold"
         android:padding="10dp"
         android:text="Longitude + "
         android:textColor="@android:color/black"
-        android:background="@drawable/round_corners_placesdetails"
+        android:translationZ="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_latitude" />
 
     <TextView
         android:id="@+id/textView_placeDetailName"
-        android:layout_width="300dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:background="#fff"
+        android:elevation="8dp"
         android:fontFamily="@font/cinzel_bold"
         android:padding="10dp"
         android:text="TextView"
         android:textColor="@android:color/black"
         android:textSize="16sp"
-        android:background="@drawable/round_corners_placesdetails"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:translationZ="8dp"
+        app:layout_constraintEnd_toStartOf="@+id/imageView_ic_google_marker"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageView_ic_google_marker"
-        android:layout_width="50dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="8dp"
+        android:layout_width="43dp"
+        android:layout_height="44dp"
+        android:background="#fff"
+        android:elevation="8dp"
+        android:tint="#ff5959"
+        android:translationZ="8dp"
         app:layout_constraintBottom_toTopOf="@+id/imageView_place_banner"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.19"
-        app:layout_constraintStart_toEndOf="@+id/textView_placeDetailName"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/ic_map_marker_google" />
 </androidx.constraintlayout.widget.ConstraintLayout>
